<package>
  <name> dumbo_driver </name>
  <version>1.0.0</version>
  <description>
    Interface and wrappers for hardware components of Dumbo.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_driver</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dumbo_force_torque_sensor</run_depend>
  <run_depend>dumbo_powercube_chain</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
