<package>
 <name> dumbo_powercube_chain </name>
  <version>1.0.0</version>
  <description>
    Low level communication and control of Dumbo's manipulators (powercube chains).
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_powercube_chain</url>
  <author>Francisco Vina</author>

  <buildtool_depend>catkin</buildtool_depend>


  <depend package="roscpp"/>
  <depend package="sensor_msgs"/>
  <depend package="control_msgs"/>
  <depend package="urdf"/>
  <depend package="pr2_controllers_msgs"/>
  <depend package="diagnostic_updater"/>
  <depend package="rostest"/>
  <depend package="kvaser_canlib"/>
  <depend package="cob_srvs"/>
  <depend package="brics_actuator"/>
  <depend package="diagnostic_msgs"/>
  <depend package="dumbo_srvs"/>
  <depend package="schunk_sdh" />


</package>

