<package>
 <name> dumbo_powercube_chain </name>
  <version>1.0.0</version>
  <description>
    Low level communication and control of Dumbo's manipulators (powercube chains).
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_powercube_chain</url>
  <author>Francisco Vina</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>kvaser_canlib</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dumbo_srvs</build_depend>
  <!-- <build_depend>schunk_sdh</build_depend> -->

  
  <run_depend>roscpp</run_depend>
  <run_depend>cob_srvs</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>kvaser_canlib</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dumbo_srvs</run_depend>
  <!-- <run_depend>schunk_sdh</run_depend> -->



</package>

